force-app/main/default/objects/LockTime__c/LockTime__c.object-meta.xml
<CustomObject>
    <label>Lock Time</label>
    <nameField>
        <label>LockTime Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LockTimes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>