force-app/main/default/objects/LockTime__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the lock Time Active ?(This field was created for NPL MA).</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>