force-app/main/default/objects/LockTime__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service Territory(This field was created for NPL MA).</description>
    <label>Area (Serv. Terr)</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>LockTimes</relationshipLabel>
    <relationshipName>LockTimes</relationshipName>
    <type>Lookup</type>
</CustomField>