force-app/main/default/objects/LockTime__c/fields/LockoutDate__c.field-meta.xml
<CustomField>
    <fullName>LockoutDate__c</fullName>
    <description>The Lock Out date(This field was created for NPL MA).</description>
    <label>LockoutDate</label>
    <type>DateTime</type>
</CustomField>