force-app/main/default/objects/LockTime__c/fields/WeekEnding_Date__c.field-meta.xml
<CustomField>
    <fullName>WeekEnding_Date__c</fullName>
    <description>The Week ending date(This field was created for NPL MA).</description>
    <label>WeekEnding Date</label>
    <type>Date</type>
</CustomField>