force-app/main/default/objects/LockTime__c/validationRules/Check_LockTime_and_Weekending_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_LockTime_and_Weekending_Date</fullName>
    <active>true</active>
    <description>Lock Out Date Time should not preceed Weekending Date.</description>
    <errorConditionFormula>IF(DATETIMEVALUE(LockoutDate__c) &lt;  DATETIMEVALUE(WeekEnding_Date__c), true, false)</errorConditionFormula>
    <errorDisplayField>LockoutDate__c</errorDisplayField>
    <errorMessage>Lock Out Date Time should not preceed Weekending Date.</errorMessage>
</ValidationRule>