force-app/main/default/objects/LockTime__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>Active__c</columns>
    <columns>WeekEnding_Date__c</columns>
    <columns>LockoutDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>